--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="radio" name="searchType" value="all" checked> All Fields
                 </label>
                 <label>
-                    <input type="radio" name="searchType" value="voterID"> Voter ID
+                    <input type="radio" name="searchType" value="voterID"> Voter ID / Card ID
                 </label>
                 <label>
                     <input type="radio" name="searchType" value="name"> Name
@@ -52,6 +52,7 @@
                         <p><strong>Search tips:</strong></p>
                         <ul style="margin: 8px 0 8px 20px;">
                             <li>Search by Voter ID: <code style="background: white; padding: 2px 4px;">2207300100001</code></li>
+                            <li>Search by Voter Card ID: <code style="background: white; padding: 2px 4px;">AZL7461478</code></li>
                             <li>Search by English name: <code style="background: white; padding: 2px 4px;">Nilesh</code> or <code style="background: white; padding: 2px 4px;">Malavekar</code></li>
                             <li>Search by Marathi name: <code style="background: white; padding: 2px 4px;">शिवराज</code> or <code style="background: white; padding: 2px 4px;">यादव</code></li>
                         </ul>
