--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="radio" name="searchType" value="all" checked> All Fields
                 </label>
                 <label>
-                    <input type="radio" name="searchType" value="voterID"> Voter ID / Card ID
+                    <input type="radio" name="searchType" value="voterID"> Voter ID
                 </label>
                 <label>
                     <input type="radio" name="searchType" value="name"> Name
