--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <img src="banner.jpg" alt="Voter Search System Banner" class="banner-img">
             <h1>Voter Search System</h1>
             <p>Search by Voter ID or Name</p>
         </div>
