Remove debug help section

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                             <li>Search by English name: <code style="background: white; padding: 2px 4px;">Nilesh</code> or <code style="background: white; padding: 2px 4px;">Malavekar</code></li>
                             <li>Search by Marathi name: <code style="background: white; padding: 2px 4px;">शिवराज</code> or <code style="background: white; padding: 2px 4px;">यादव</code></li>
                         </ul>
-                        <p style="margin-top: 10px;"><strong>Troubleshooting:</strong></p>
+                        <!-- <p style="margin-top: 10px;"><strong>Troubleshooting:</strong></p>
                         <ul style="margin: 8px 0 0 20px;">
                             <li>Open Browser Console (F12) to see debug logs</li>
                             <li>Ensure votersJSON.json is in the same folder as index.html</li>
                             <li>Refresh page if data doesn't load</li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </details>
             </div>
